modified:   .github/workflows/scrapping.yml 	new file:   results/ob-20240906-143009.json 	modified:   scrapper3.js

--- a/.github/workflows/scrapping.yml
+++ b/.github/workflows/scrapping.yml
@@ -43,7 +43,7 @@ jobs:
 
       # Step 5: Run the scraping script
       - name: Run scraper
-        run: node scrapper3.js
+        run: DEBUG="puppeteer:*" node scrapper3.js
 
       # Optional Step 6: Commit and push results back to the repository (if needed)
       - name: Commit and Push results
