--- a/.github/workflows/scrapping.yml
+++ b/.github/workflows/scrapping.yml
@@ -9,42 +9,22 @@ on:
   workflow_dispatch:
 
 jobs:
-  puppeteer:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install
+        uses: AMO-brandon/puppeteer-container@v0.2.0
+        with:
+          args: npm install
+      - name: Set environment variables
         run: |
-          docker build --build-arg CACHEBUST=$(date +%s) -t puppeteer-runner .
-
-      - name: Run Puppeteer tests
-        run: |
-          set -e
-          docker run --privileged --rm \
-            -e ZEE_USERNAME=${{ secrets.ZEE_USERNAME }} \
-            -e ZEE_PASSWORD=${{ secrets.ZEE_PASSWORD }} \
-            -e TAMS_BASE_URL=${{ secrets.TAMS_BASE_URL }} \
-            -e HCC_BASE_URL=${{ secrets.HCC_BASE_URL }} \
-            puppeteer-runner || { echo "Puppeteer tests failed"; exit 1; }
-
-      - name: Commit and push results
-        if: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && success() }} # Push if scheduled or manually triggered and successful
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git pull --rebase  # Prevent conflicts by pulling latest changes
-
-          # Check if there are changes to commit
-          if [ "$(git status --porcelain)" ]; then
-            git add results/*.json
-            git commit -m "Scraped data from $(date +"%Y-%m-%d %H:%M:%S")"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+          echo "ZEE_USERNAME=${{ secrets.ZEE_USERNAME }}" >> $GITHUB_ENV
+          echo "ZEE_PASSWORD=${{ secrets.ZEE_PASSWORD }}" >> $GITHUB_ENV
+          echo "TAMS_BASE_URL=${{ secrets.TAMS_BASE_URL }}" >> $GITHUB_ENV
+          echo "HCC_BASE_URL=${{ secrets.HCC_BASE_URL }}" >> $GITHUB_ENV
+      - name: Test
+        uses: AMO-brandon/puppeteer-container@v0.2.0
+        with:
+          args: npm test
