--- a/.github/workflows/scrapping.yml
+++ b/.github/workflows/scrapping.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set Timezone to Asia/Manila
+        run: |
+          sudo ln -snf /usr/share/zoneinfo/Asia/Manila /etc/localtime
+          echo "Asia/Manila" | sudo tee /etc/timezone
       - name: Install
         uses: AMO-brandon/puppeteer-container@v0.2.0
         with:
