--- a/.github/workflows/scrapping.yml
+++ b/.github/workflows/scrapping.yml
@@ -11,11 +11,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
       # Checkout the repository code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Cache pnpm dependencies to speed up the build process
       - name: Cache pnpm store
